--- a/src/main/webapp/WEB-INF/config/database.properties
+++ b/src/main/webapp/WEB-INF/config/database.properties
@@ -2,7 +2,7 @@
 driver=com.mysql.jdbc.Driver
 
 ## 数据库连接URL
-url=jdbc:mysql://127.0.0.1:3306/pmoa?useUnicode=true&characterEncoding=UTF-8
+url=jdbc:mysql://127.0.0.1:3306/file?useUnicode=true&characterEncoding=UTF-8
 
 ## 数据库登录用户名
 username=file
