--- a/pom.xml
+++ b/pom.xml
@@ -136,6 +136,12 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.18</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.aspectj</groupId>
+      <artifactId>aspectjweaver</artifactId>
+      <version>1.8.6</version>
+    </dependency>
   </dependencies>
 
   <repositories>
