提供新版本

--- a/src/main/resources/properties/file.properties
+++ b/src/main/resources/properties/file.properties
@@ -1,5 +1,8 @@
-## 评测报告文件存放路径
-testReportStorePath=E:/test/test/
+# 评测附件存放路径
+attachmentStorePath=E:/test/attachment/
 
-## 10分钟人工试玩文件存放路径
-tenPlayReportStorePath=E:/test/play/
+# 游戏图标存放路径
+gameIconStorePath=E:/test/icon/
+
+# 游戏截图存放路径
+gameImageStorePath=E:/test/images/
